User fix names, front in work

--- a/RegisterUserLab/Views/Home/Index.cshtml
+++ b/RegisterUserLab/Views/Home/Index.cshtml
@@ -1,8 +1,57 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Rejestracja";
 }
 
+@page
+@model RegisterUserLab.Models.User
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Zarejestruj się</h1>
+    <div class="border container" style="padding:30px;">
+        <form method="post">
+            <div class="col-4">
+                <label asp-for="Name" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label asp-for="Login" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label asp-for="Login" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label asp-for="Login" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label asp-for="Login" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label asp-for="Login" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+            <div class="col-4">
+                <label asp-for="Login" />
+            </div>
+            <div class="col-6">
+                <input asp-for="Login" class="form-control" />
+            </div>
+
+        </form>
+    </div>
 </div>
