--- a/RegisterUserLab/Views/Home/Index.cshtml
+++ b/RegisterUserLab/Views/Home/Index.cshtml
@@ -1,57 +1,93 @@
-﻿@{
-    ViewData["Title"] = "Rejestracja";
-}
-
-@page
+﻿
 @model RegisterUserLab.Models.User
-
 <div class="text-center">
     <h1 class="display-4">Zarejestruj się</h1>
-    <div class="border container" style="padding:30px;">
-        <form method="post">
-            <div class="col-4">
-                <label asp-for="Name" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-            <div class="col-4">
-                <label asp-for="Login" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-            <div class="col-4">
-                <label asp-for="Login" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-            <div class="col-4">
-                <label asp-for="Login" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-            <div class="col-4">
-                <label asp-for="Login" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-            <div class="col-4">
-                <label asp-for="Login" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-            <div class="col-4">
-                <label asp-for="Login" />
-            </div>
-            <div class="col-6">
-                <input asp-for="Login" class="form-control" />
-            </div>
-
-        </form>
-    </div>
 </div>
+<div class="border container" style="padding:30px;">
+
+    <form method="post">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <div class="col-4">
+                Imie
+            </div>
+            <div class="col-6">
+                <input asp-for="Name" class="form-control" placeholder="Imie" />
+
+            </div>
+            <span asp-validation-for="Name" class="text-danger" />
+        </div>
+        <div class="form-group">
+            <div class="col-4">
+                Nazwisko
+            </div>
+            <div class="col-6">
+                <input class="form-control" asp-for="Surname" placeholder="Nazwisko" />
+
+
+            </div>
+            <span asp-validation-for="Surname" class="text-danger" />
+        </div>
+        <div class="form-group">
+            <div class="col-4">
+                Płeć
+            </div>
+            <div class="col-6">
+                <select class="form-control" id="male" asp-for="isMale">
+                    <option>Mężczyzna</option>
+                    <option>Kobieta</option>
+
+                </select>
+
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-4">
+                Email
+            </div>
+            <div class="col-6">
+                <input class="form-control" asp-for="Email" placeholder="Email" />
+
+            </div>
+            <span asp-validation-for="Email" class="text-danger" />
+        </div>
+        <div class="form-group">
+            <div class="col-4">
+                Login
+            </div>
+            <div class="col-6">
+                <input class="form-control" asp-for="Login" placeholder="Login" />
+
+            </div>
+            <span asp-validation-for="Login"  class="text-danger"></span>
+        </div>
+        <div class="form-group">
+
+            <div class="col-4">
+                Hasło
+            </div>
+            <div class="col-6">
+                <input class="form-control" asp-for="Password" type="password" placeholder="Hasło" />
+
+            </div>
+            <span class="text-danger" asp-validation-for="Password" />
+        </div>
+        <div class="form-group">
+            <div class="col-4">
+                Powtórz hasło
+            </div>
+            <div class="col-6">
+                <input type="password" asp-for="confPassword" placeholder="Powtórz Hasło" class="form-control" />
+            </div>
+        </div>
+
+        <input type="submit" value="Zarejestruj" class="btn btn-primary form-control" />
+
+
+    </form>
+
+</div>
+
+@section scripts{
+    @await Html.PartialAsync("_ValidationScriptsPartial")
+}
