--- a/RegisterUserLab/Views/Shared/_Layout.cshtml
+++ b/RegisterUserLab/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Login">Zaloguj się</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Admin">Panel Admina</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserHome">Panel Użytkownika</a>
+                        </li>
                     </ul>
                 </div>
             </div>
