--- a/RegisterUserLab/Views/Home/Admin.cshtml
+++ b/RegisterUserLab/Views/Home/Admin.cshtml
@@ -5,5 +5,18 @@
 
 <h1>Admin</h1>
 
-Nie jesteś adminem
+Zarządzanie Użytkownikiem <button>Dodaj</button>
+<button>Usuń</button>
+<button>Resetuj Hasło</button>
+<br />
+
+Zarządzanie Wydarzeniami<button>Dodaj</button>
+<button>Usuń</button>
+<button>Modyfikuj</button>
+<br />
+Obsługa zapisów na wydarzenie<button>Potwierdź zapis</button>
+<button>Odrzuć zapis</button>
+
+<br />
+
 
